# BD_exemplos

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.toml  config.toml.example  coverage.xml  generate_seed_large.py  pyproject.toml  requirements.txt  teste2_seed.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  tests.yml
bd_exemplos/: __init__.py  config.py  db.py
bd_exemplos/scripts/: __init__.py  seed_biblioteca.py  seed_cinema.py  seed_clinica.py  seed_loja.py
scripts/: seed_biblioteca.py  seed_loja.py
tests/: __init__.py  test_builders.py  test_config.py  test_db.py  test_seed_biblioteca.py  test_seed_cinema.py  test_seed_clinica.py  test_seed_loja.py
