[tool.poetry]
name = "bd-exemplos"
version = "0.1.0"
description = "Bases de dados para teste (MySQL)"
readme = "README.md"
packages = [{ include = "bd_exemplos" }]

[tool.poetry.dependencies]
python = "^3.9"
toml = ">=0.10.2"
mysql-connector-python = ">=8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
